--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,10 @@ set(SOURCE_FILES
     src/lexer/lexer.cpp
     src/parser/parser.cpp
     src/parser/resolver.cpp
-        src/parser/type_checker.cpp)
+    src/parser/type_checker.cpp
+    src/terp/treewalk_terp.cpp
+    src/terp/environment.cpp
+)
 
 set(HEADER_FILES
     src/common/source_file.h
@@ -56,6 +59,10 @@ set(HEADER_FILES
     src/parser/type.h
     src/common/source_range.h
     src/parser/resolver.h
-        src/parser/type_checker.h)
+    src/parser/type_checker.h
+    src/terp/treewalk_terp.h
+    src/terp/environment.h
+    src/terp/terp_exception.h
+)
 
 add_executable(${EXECUTABLE_NAME} ${SOURCE_FILES} ${HEADER_FILES})
