don't link to llvm lto, because it breaks windows builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,139 @@ set(HEADER_FILES
 
 # Find the libraries that correspond to the LLVM components
 # that we wish to use
-llvm_map_components_to_libnames(llvm_libs support core all)
+llvm_map_components_to_libnames(llvm_libs 
+	FuzzMutate
+	XCoreDisassembler
+	XCoreCodeGen
+	XCoreDesc
+	XCoreInfo
+	XCoreAsmPrinter
+	SystemZDisassembler
+	SystemZCodeGen
+	SystemZAsmParser
+	SystemZDesc
+	SystemZInfo
+	SystemZAsmPrinter
+	SparcDisassembler
+	SparcCodeGen
+	SparcAsmParser
+	SparcDesc
+	SparcInfo
+	SparcAsmPrinter
+	PowerPCDisassembler
+	PowerPCCodeGen
+	PowerPCAsmParser
+	PowerPCDesc
+	PowerPCInfo
+	PowerPCAsmPrinter
+	NVPTXCodeGen
+	NVPTXDesc
+	NVPTXInfo
+	NVPTXAsmPrinter
+	MSP430CodeGen
+	MSP430Desc
+	MSP430Info
+	MSP430AsmPrinter
+	MipsDisassembler
+	MipsCodeGen
+	MipsAsmParser
+	MipsDesc
+	MipsInfo
+	MipsAsmPrinter
+	LanaiDisassembler
+	LanaiCodeGen
+	LanaiAsmParser
+	LanaiDesc
+	LanaiAsmPrinter
+	LanaiInfo
+	HexagonDisassembler
+	HexagonCodeGen
+	HexagonAsmParser
+	HexagonDesc
+	HexagonInfo
+	BPFDisassembler
+	BPFCodeGen
+	BPFAsmParser
+	BPFDesc
+	BPFInfo
+	BPFAsmPrinter
+	ARMDisassembler
+	ARMCodeGen
+	ARMAsmParser
+	ARMDesc
+	ARMInfo
+	ARMAsmPrinter
+	ARMUtils
+	AMDGPUDisassembler
+	AMDGPUCodeGen
+	AMDGPUAsmParser
+	AMDGPUDesc
+	AMDGPUInfo
+	AMDGPUAsmPrinter
+	AMDGPUUtils
+	AArch64Disassembler
+	AArch64CodeGen
+	AArch64AsmParser
+	AArch64Desc
+	AArch64Info
+	AArch64AsmPrinter
+	AArch64Utils
+	Symbolize
+	DebugInfoPDB
+	DebugInfoDWARF
+	TableGen
+	LineEditor
+	OrcJIT
+	MIRParser
+	DlltoolDriver
+	X86Disassembler
+	X86AsmParser
+	X86CodeGen
+	GlobalISel
+	SelectionDAG
+	AsmPrinter
+	X86Desc
+	MCDisassembler
+	X86Info
+	X86AsmPrinter
+	X86Utils
+	MCJIT
+	Coverage
+	LibDriver
+	Option
+	Coroutines
+	ObjectYAML
+	WindowsManifest
+	Interpreter
+	ExecutionEngine
+	RuntimeDyld
+	Passes
+	ObjCARCOpts
+	ipo
+	Instrumentation
+	Vectorize
+	Linker
+	IRReader
+	AsmParser
+	CodeGen
+	Target
+	ScalarOpts
+	InstCombine
+	BitWriter
+	AggressiveInstCombine
+	TransformUtils
+	Analysis
+	ProfileData
+	Object
+	MCParser
+	MC
+	DebugInfoCodeView
+	DebugInfoMSF
+	BitReader
+	Core
+	BinaryFormat
+	Support
+	Demangle)
 
 add_executable(${EXECUTABLE_NAME} ${SOURCE_FILES} ${HEADER_FILES})
 
