--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
 language: cpp
 compiler: gcc
 dist: trusty
+addons:
+    apt:
+        sources:
+            - ubuntu-toolchain-r-test
+        packages:
+            - gcc-8
+            - g++-8
 
-before_install:
-  # C++17
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -qq
-
-install: 
-  # C++17
-  - sudo apt-get install -qq g++-6
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
+before_script:
+  - mkdir build
+  - cd build
+  - cmake ..
 
 script: 
-  - mkdir -p build
-  - cd build
-  - cmake .. && make -j2
+  - make -j2
