--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,9 @@ notifications:
   email: false
 
 before_script:
-  - sudo apt-get purge clang 
   - mkdir build
   - cd build
-  - cmake -DCMAKE_CXX_COMPILER=$(which g++-8) -DCMAKE_C_COMPILER=$(which gcc-8) -DCMAKE_PREFIX_PATH=  ..
+  - cmake -DCMAKE_CXX_COMPILER=$(which g++-8) -DCMAKE_C_COMPILER=$(which gcc-8) -DCMAKE_PREFIX_PATH=/usr/lib/ccache ..
 
 script: 
   - make -j2
