--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ notifications:
   email: false
 
 before_script:
-  - ls /usr/local/lib/cmake/
+  - ls /usr/lib/cmake/
     #ls /usr/local/clang-7.0.0/lib/cmake/llvm
   - mkdir build
   - cd build
