--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,14 @@ addons:
             - llvm-7
             - llvm-7-dev
             - llvm-7-runtime
-
+            - libedit-dev
 notifications:
   email: false
 
 before_script:
-  - sudo rm -rf /usr/local/clang-5.0.0/
   - mkdir build
   - cd build
-  - cmake -DCMAKE_CXX_COMPILER=$(which g++-8) -DCMAKE_C_COMPILER=$(which gcc-8) -DLLVM_INSTALL_PREFIX=/usr/lib/llvm-7/ ..
+  - cmake -DCMAKE_CXX_COMPILER=$(which g++-8) -DCMAKE_C_COMPILER=$(which gcc-8) -DCMAKE_PREFIX_PATH=/usr/lib/llvm-7/ ..
 
 script: 
   - make -j2
