Try without libedit

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,12 @@ addons:
         packages:
             - gcc-8
             - g++-8
-              #- clang-7
+            #- clang-7
             - libllvm7
             - llvm-7
             - llvm-7-dev
             - llvm-7-runtime
-            - libedit-dev
+            #- libedit-dev
 notifications:
   email: false
 
@@ -24,4 +24,4 @@ before_script:
   - cmake -DCMAKE_CXX_COMPILER=$(which g++-8) -DCMAKE_C_COMPILER=$(which gcc-8) -DCMAKE_PREFIX_PATH=/usr/lib/llvm-7/ ..
 
 script: 
-  - make -j2
+  - make -j
