--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,10 @@ cache:
   directories:
     deps
 
+install:
+    - timeout 1800 ./get-deps.sh || true
+
 before_script:
-  - ./get-deps.sh  
   - mkdir build
   - cd build
   - cmake -DCMAKE_CXX_COMPILER=$(which g++-8) -DCMAKE_C_COMPILER=$(which gcc-8) -DCMAKE_PREFIX_PATH=/usr/local/lib/cmake/llvm ..
