--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,12 @@ cache:
     deps
 
 install:
-    - timeout 1800 ./get-deps.sh || true
+    - ./get-deps.sh
 
 before_script:
-# - mkdir build
-# - cd build
-# - cmake -DCMAKE_CXX_COMPILER=$(which g++-8) -DCMAKE_C_COMPILER=$(which gcc-8) -DCMAKE_PREFIX_PATH=/usr/local/lib/cmake/llvm ..
+  - mkdir build
+  - cd build
+  - cmake -DCMAKE_CXX_COMPILER=$(which g++-8) -DCMAKE_C_COMPILER=$(which gcc-8) -DCMAKE_PREFIX_PATH=/deps/clang+llvm-7.0.0-x86_64-linux-gnu-ubuntu-16.04 ..
 
 script: 
-#  - make -j2
+  - make -j2
