--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,14 @@ cache:
     deps
 
 install:
+    - sudo rm -rf /usr/local/clang-5.0.0
     - ./get-deps.sh
     - sudo cp -r deps/clang+llvm-7.0.0-x86_64-linux-gnu-ubuntu-16.04/* /usr/local
 
 before_script:
   - mkdir build
   - cd build
-  - cmake -DCMAKE_CXX_COMPILER=$(which g++-8) -DCMAKE_C_COMPILER=$(which gcc-8) ..
+  - cmake -DCMAKE_CXX_COMPILER=$(which g++-8) -DCMAKE_C_COMPILER=$(which gcc-8) -DCMAKE_LINKER=$(which ld-8) ..
 
 script: 
   - make -j2
