After rebuilding llvm with "LLVM_EXPERIMENTAL_TARGETS_TO_BUILD=WebAssembly", the webassembly target "wasm32-unknown-unknown-wasm" works.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,6 +178,12 @@ llvm_map_components_to_libnames(llvm_libs
 	AArch64Info
 	AArch64AsmPrinter
 	AArch64Utils
+	WebAssemblyDisassembler
+	WebAssemblyCodeGen
+	WebAssemblyAsmParser
+	WebAssemblyDesc
+	WebAssemblyInfo
+	WebAssemblyAsmPrinter
 	Symbolize
 	DebugInfoPDB
 	DebugInfoDWARF
