--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,7 +70,7 @@ set(SOURCE_FILES
     src/codegen/llvm/llvm_type_emit_visitor.cpp
     src/graphviz/dotfile_visitor.cpp
     src/graphviz/dotfile_emitter.cpp
-        src/common/compilation_session.cpp)
+	src/common/compilation_session.cpp)
 
 set(HEADER_FILES
     src/compiler.h
@@ -104,7 +104,8 @@ set(HEADER_FILES
     src/codegen/llvm/llvm_type_emit_visitor.h
     src/graphviz/dotfile_visitor.h
 	src/graphviz/dotfile_emitter.h
-        src/common/compilation_session.h src/common/symbol_info.h)
+    src/common/compilation_session.h
+	src/common/symbol_info.h)
 
 # Find the libraries that correspond to the LLVM components
 # that we wish to use
