--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ set(SOURCE_FILES
     src/codegen/llvm/llvm_emitter.cpp
     src/codegen/llvm/llvm_emit_visitor.cpp
     src/codegen/llvm/llvm_type_emit_visitor.cpp
+	src/codegen/llvm/llvm_debug_scope_manager.cpp
 	src/codegen/llvm/llvm_debug_type_emit_visitor.cpp
     src/graphviz/dotfile_visitor.cpp
     src/graphviz/dotfile_emitter.cpp
@@ -103,6 +104,7 @@ set(HEADER_FILES
     src/codegen/llvm/llvm_emit_visitor.h
     src/codegen/llvm/llvm_emitter.h
     src/codegen/llvm/llvm_type_emit_visitor.h
+	src/codegen/llvm/llvm_debug_scope_manager.h
 	src/codegen/llvm/llvm_debug_type_emit_visitor.h
     src/graphviz/dotfile_visitor.h
 	src/graphviz/dotfile_emitter.h
